# dust-analyzer

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: update-data.yml  update-plot.yml
docs/: PRD-v0.2.md  mcp-app-specs.md  mcp-server-sdk.md
examples/: dust_explorer.py
examples/__marimo__/session/: dust_explorer.py.json
scripts/: run_mcp.ps1
src/dust_analyzer/: __init__.py  __main__.py  cache.py  cams.py  location.py  paths.py  plot.py  remote.py  server.py  uba.py
src/dust_analyzer/mcp_ui/: __init__.py  compare.html  dashboard.html  map.html  timeseries.html
