[project]
name = "dust-analyzer"
version = "0.1.0"
description = "Saharan dust vs. anthropogenic emissions — CAMS/Copernicus air-quality analysis"
readme = "README.md"
authors = [
    { name = "Björn Bethge", email = "hello@synapticore.io" }
]
requires-python = ">=3.11"
dependencies = [
    "cdsapi>=0.7.7",
    "plotly>=5.24.0",
    "marimo[recommended]>=0.20.4",
    "xarray>=2026.2.0",
    "netCDF4>=1.7.0",
]

[project.scripts]
dust-analyzer = "dust_analyzer.__main__:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.marimo.runtime]
pythonpath = ["src"]
